<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".details.StockDetailFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:id="@+id/text_layout"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_quote"
                android:padding="5dp"
                android:textSize="30sp"
                android:layout_weight="1"
                android:textColor="@color/material_blue_700"
                tools:text="54.45"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_change"
                android:padding="5dp"
                android:layout_weight="2"
                android:textSize="20sp"
                tools:text="-59"/>
         </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_day_hi_lbl"
                android:padding="5dp"
                android:layout_weight="1"
                android:text="@string/day_high_lbl"
                android:contentDescription="@null"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_day_hi_val"
                android:padding="5dp"
                android:layout_weight="1"
                tools:text="150"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_year_hi_lbl"
                android:padding="5dp"
                android:layout_weight="1"
                android:text="@string/year_high_lbl"
                android:contentDescription="@null"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_year_hi_val"
                android:layout_weight="1"
                android:padding="5dp"
                tools:text="250"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_day_low_lbl"
                android:padding="5dp"
                android:layout_weight="1"
                android:text="@string/day_lo_lbl"
                android:contentDescription="@null"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_day_low_val"
                android:padding="5dp"
                android:layout_weight="1"
               tools:text="100"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/tv_year_low_lbl"
                android:padding="5dp"
                android:text="@string/year_lo_lbl"
                android:contentDescription="@null"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/tv_year_low_val"
                android:padding="5dp"
                tools:text="164"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/tv_avg_vol_lbl"
                android:padding="5dp"
                android:text="@string/avg_day_vol_lbl"
                android:contentDescription="@null"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/tv_day_vol_val"
                android:padding="5dp"
                tools:text="123456"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/tv_vol_lbl"
                android:padding="5dp"
                android:text="@string/volume"
                android:contentDescription="@null"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/tv_vol_val"
                android:padding="5dp"
                tools:text="123456789"/>
        </TableRow>
    </TableLayout>


    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:layout_below="@id/text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_1d"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="?android:attr/borderlessButtonStyle"
            android:layout_height="wrap_content"
            android:text="@string/d1"
            android:contentDescription="@string/a11y_btn_1d"/>
        <Button
            android:id="@+id/button_1w"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/w1"
            android:contentDescription="@string/a11y_btn_5d"/>
        <Button
            android:id="@+id/button_1m"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/m1"
            android:contentDescription="@string/a11y_btn_1m"/>
        <Button
            android:id="@+id/button_1y"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/y1"
            android:contentDescription="@string/a11y_btn_1y"/>
        <Button
            android:id="@+id/button_5y"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/y5"
            android:contentDescription="@string/a11y_btn_5d"/>
        <Button
            android:id="@+id/button_max"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/max"
            android:contentDescription="@string/a11y_btn_max"/>
    </LinearLayout>


    <com.github.mikephil.charting.charts.LineChart
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/buttons_layout"
        android:id="@+id/chart_valueLineChart">
    </com.github.mikephil.charting.charts.LineChart>


</RelativeLayout>
